Migrating to SDN 6  - work in progress  - DiagramRepository inline param